# os-labs-repo

./: .gitignore
os-labs/exercise-mouse/mouse_plotter/: CMakeLists.txt
os-labs/exercise-mouse/mouse_plotter/include/: functions.h
os-labs/exercise-mouse/mouse_plotter/src/: functions.c  main.c
os-labs/exercise-mouse/mouse_saver/: CMakeLists.txt
os-labs/exercise-mouse/mouse_saver/include/: functions.h
os-labs/exercise-mouse/mouse_saver/src/: functions.c  main.c
os-labs/lastlabs/binary_files/binary_files_intro/: CMakeLists.txt
os-labs/lastlabs/binary_files/binary_files_large_write/: CMakeLists.txt
os-labs/lastlabs/files_copy_fopen/src/: main.c
os-labs/lastlabs/files_copy_open/: CMakeLists.txt
os-labs/lastlabs/keyboard_data/: CMakeLists.txt
os-labs/os-exercises/: COPY_CEXE_HO.sh  MAKE_CEXE_EXE.sh
os-labs/os-exercises/01HOLDER/: execute-reader-cexe.sh  execute-writer-cexe.sh  get_exec_h.sh  reader  writer
os-labs/os-exercises/11DONE/piano/: CMakeLists.txt
os-labs/os-exercises/11DONE/piano/include/: functions.h  structs.h
os-labs/os-exercises/11DONE/piano/src/: functions.c  main.c
os-labs/os-exercises/11DONE/reader/: CMakeLists.txt
os-labs/os-exercises/ALL/: CMakeLists.txt
os-labs/os-exercises/ALL/src/: asyncReadWrite.c  bouncy.c  call_main_w_args.c  functions.c  getchbase.c  mreaderwriter.c  playtone.c  processes.c  pthreads.c  qreaderwriter.c  semaphores.c  signals.c  the_cli_stuff.c
os-labs/os-exercises/cpu_sched_priority/: CMakeLists.txt
os-labs/os-exercises/imu_handler/: CMakeLists.txt
os-labs/os-exercises/imu_handler/src/: main.c
os-labs/os-exercises/supervisor/: CMakeLists.txt
os-labs/os-exercises/writer/: CMakeLists.txt  writer
os-labs/os-lab-1/task3/: CMakeLists.txt
os-labs/os-lab-1/task3/include/: check_hand.h  fill_deck.h  fill_hand.h
os-labs/os-lab-1/task3/src/: Card.c  fill_deck.c
os-labs/os-lab-2/greetings/: CMakeLists.txt
os-labs/os-lab-2/infinite_counter/: CMakeLists.txt
os-labs/os-lab-2/qreader/: CMakeLists.txt
os-labs/os-lab-2/task1/: CMakeLists.txt
os-labs/os-lab-2/task2/: CMakeLists.txt
os-labs/os-lab-2/task3/: CMakeLists.txt
os-labs/os-lab-2/task4Qreader/: CMakeLists.txt
os-labs/os-lab-2/task4Qwriter/: CMakeLists.txt
os-labs/os-lab-2/task4reader/: CMakeLists.txt
os-labs/os-lab-2/task4writer/: CMakeLists.txt
os-labs/os-lab-2/taskformat/: CMakeLists.txt
os-labs/os-lab-3/task1/: CMakeLists.txt
os-labs/os-lab-3/task2/: CMakeLists.txt
os-labs/os-lab-3/task4/: CMakeLists.txt
os-labs/os-lab-3/task5/: CMakeLists.txt
os-labs/os-lab-3/task5/include/: functions.h
os-labs/os-lab-3/task5/src/: functions.c  main.c
os-labs/os-lab-5/: Justification.odt  Table-1.odt  Table-2.odt  tables
os-labs/os-lab-5/cpu_sched_priority/: CMakeLists.txt
os-labs/os-lab-5/task4/: CMakeLists.txt
os-labs/os-lab-5/thread_policies/: CMakeLists.txt
os-labs/os-lab-5/thread_policies/include/: functions.h  functions_v0.h
os-labs/os-lab-5/thread_policies/src/: functions.c  functions_v0.c  main.c  main_v0.c
os-labs/os-lab-format/task1/: CMakeLists.txt
os-labs/os-lab-format/task2/: CMakeLists.txt
os-labs/os-lab-format/task3/: CMakeLists.txt
os-labs/os-lab-format/task5/: CMakeLists.txt
os-labs/os-lab0/task1/: CMakeLists.txt
os-labs/os-lab0/task2/: CMakeLists.txt
os-labs/os-test-2/review/: memory-management.txt
os-labs/os-test-2/task6/: CMakeLists.txt
(+94 files in other folders)
